# ripple-network

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: ripple.py
app/core/: config.py
app/schemas/: ripple.py
app/services/: xrpl_service.py
app/web/: app.js  index.html  styles.css
tests/: test_health.py
