[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hanafi-ripple-engine"
version = "0.1.0"
description = "XRPL testnet prototype for HanaFi payment engine competition demo."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "xrpl-py>=3.0,<5.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.24,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
